--- a/app/src/main/res/layout/activity_change_psw.xml
+++ b/app/src/main/res/layout/activity_change_psw.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:id="@+id/base_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/base_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_bg"
@@ -70,12 +70,12 @@
             android:textSize="@dimen/sp18"/>
 
         <TextView
-            android:paddingLeft="4dp"
             android:id="@+id/tv_username"
             style="@style/et_style"
             android:layout_height="50dp"
             android:layout_marginLeft="12dp"
             android:gravity="center_vertical"
+            android:paddingLeft="4dp"
             android:textSize="16sp"/>
     </LinearLayout>
 
@@ -97,15 +97,16 @@
             android:textSize="@dimen/sp18"/>
 
         <EditText
-            android:paddingLeft="4dp"
             android:id="@+id/et_new_psw"
             style="@style/et_style"
             android:layout_height="50dp"
             android:layout_marginLeft="12dp"
+            android:digits="QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm1234567890"
             android:gravity="center_vertical"
-            android:hint="最长12个字符"
+            android:hint="最长12个字符 最短6个字符"
             android:inputType="textPassword"
             android:maxLength="12"
+            android:paddingLeft="4dp"
             android:textSize="16sp"/>
 
     </LinearLayout>
@@ -127,18 +128,25 @@
             android:textSize="@dimen/sp18"/>
 
         <EditText
-            android:paddingLeft="4dp"
             android:id="@+id/et_new_pswc"
             style="@style/et_style"
             android:layout_height="50dp"
             android:layout_marginLeft="12dp"
+            android:digits="QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm1234567890"
             android:gravity="center_vertical"
-            android:hint="最长12个字符"
+            android:hint="最长12个字符 最短6个字符"
             android:inputType="textPassword"
             android:maxLength="12"
+            android:paddingLeft="4dp"
             android:textSize="16sp"/>
 
     </LinearLayout>
 
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="6dp"
+        android:text="提示:  密码不能输入特殊字符"
+        android:textColor="@color/dark_red"/>
 </LinearLayout>
