--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
               android:id="@+id/base_layout"
+              android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
 
@@ -42,6 +42,14 @@
                 style="@style/rb_style"
                 android:drawableTop="@drawable/rb_progress_selector"
                 android:text="@string/tab_progress"
+                android:textColor="@drawable/tab_text_selector"
+                app:hasNew="false"/>
+
+            <com.tutu.pestcs.widget.TabRadioButton
+                android:id="@+id/rb_insert"
+                style="@style/rb_style"
+                android:drawableTop="@drawable/rb_progress_selector"
+                android:text="@string/tab_insert"
                 android:textColor="@drawable/tab_text_selector"
                 app:hasNew="false"/>
 
