--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -5,62 +5,88 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <TextView
-        style="@style/title_style"
-        android:text="数据统计"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/tab_height"
+        android:background="@color/colorPrimary">
+
+        <LinearLayout
+            android:id="@+id/ll_back"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:minWidth="80dp"
+            android:paddingLeft="16dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:drawableLeft="@mipmap/tabmap"
+                android:drawablePadding="8dp"
+                android:gravity="center_vertical"
+                android:textColor="@color/white"/>
+        </LinearLayout>
+
+        <TextView
+            style="@style/title_style"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:text="现场检查数据统计"/>
+    </RelativeLayout>
 
 
     <LinearLayout
-        android:gravity="center"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <TextView
-            android:gravity="center"
-            android:minWidth="200dp"
             android:id="@+id/tv_task_code"
-            android:textSize="16sp"
-            android:text="考评任务编号:463782643"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <TextView
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:minWidth="200dp"
+            android:text="考评任务编号:463782643"
+            android:textSize="16sp"/>
+
+        <TextView
             android:id="@+id/tv_city"
-            android:layout_marginLeft="24dp"
-            android:textSize="16sp"
-            android:text="考评城市:黄石"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:gravity="center"
+            android:minWidth="200dp"
+            android:text="考评城市:黄石"
+            android:textSize="16sp"/>
 
     </LinearLayout>
 
     <LinearLayout
-        android:gravity="center"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <TextView
-            android:gravity="center"
-            android:minWidth="200dp"
             android:id="@+id/tv_time"
-            android:textSize="16sp"
-            android:text="考评开始时间:2401-19-19"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <TextView
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:minWidth="200dp"
+            android:text="考评开始时间:2401-19-19"
+            android:textSize="16sp"/>
+
+        <TextView
             android:id="@+id/tv_cheaker_name"
-            android:layout_marginLeft="24dp"
-            android:textSize="16sp"
-            android:text="检查人员:分点"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:gravity="center"
+            android:minWidth="200dp"
+            android:text="检查人员:分点"
+            android:textSize="16sp"/>
 
     </LinearLayout>
 
