--- a/app/src/main/res/layout/insert_fragment.xml
+++ b/app/src/main/res/layout/insert_fragment.xml
@@ -63,12 +63,18 @@
                 android:minWidth="100dp"
                 />
 
-            <CheckBox
-                android:id="@+id/cb_zhongdian"
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="11dp"
                 android:text="是否是重点单位"/>
+
+            <CheckBox
+                android:id="@+id/cb_zhongdian"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
         </LinearLayout>
 
         <LinearLayout
@@ -86,6 +92,7 @@
                 android:text="单位名称/检查地点"/>
 
             <EditText
+                android:maxLength="15"
                 android:id="@+id/et_name"
                 style="@style/et_style"
                 android:hint="请填写"/>
