--- a/app/src/main/res/layout/statistic_zhang_fragment.xml
+++ b/app/src/main/res/layout/statistic_zhang_fragment.xml
@@ -2,8 +2,8 @@
 
 <com.tutu.pestcs.widget.OverScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     android:id="@+id/base_layout"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -17,10 +17,13 @@
             android:id="@+id/tv_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:lineSpacingExtra="7dp"
             android:paddingBottom="16dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:paddingTop="6dp"/>
+            android:paddingTop="10dp"
+            android:textSize="18sp"/>
+
 
     </LinearLayout>
 
