--- a/app/src/main/res/layout/mosquitos_insert_fragment.xml
+++ b/app/src/main/res/layout/mosquitos_insert_fragment.xml
@@ -668,6 +668,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/tv_shuitileixing"
             style="@style/describ_title"
             android:text="水体类型"/>
 
