--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -2,9 +2,9 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/base_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/base_layout"
     android:background="@color/main_bg"
     android:orientation="vertical"
     tools:context="com.tutu.pestcs.activity.AddUser">
@@ -45,14 +45,16 @@
                 android:textSize="@dimen/sp18"/>
 
             <EditText
-                android:hint="最长12个字符"
-                android:maxLength="8"
-                android:layout_height="40dp"
                 android:id="@+id/et_username"
-                android:textSize="16sp"
                 style="@style/et_style"
+                android:layout_height="40dp"
                 android:layout_marginLeft="12dp"
-                android:padding="0dp"/>
+                android:digits="QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm1234567890"
+                android:hint="最长8个字符"
+                android:inputType="text"
+                android:maxLength="8"
+                android:padding="0dp"
+                android:textSize="16sp"/>
 
         </LinearLayout>
 
