--- a/app/src/main/res/layout/insert_mouse_fragment.xml
+++ b/app/src/main/res/layout/insert_mouse_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<com.tutu.pestcs.widget.TuLinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -1039,4 +1039,4 @@
 
     </com.tutu.pestcs.widget.OverScrollView>
 
-</LinearLayout>
+</com.tutu.pestcs.widget.TuLinearLayout>
