--- a/app/src/main/res/layout/note_fragment.xml
+++ b/app/src/main/res/layout/note_fragment.xml
@@ -1,54 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.tutu.pestcs.widget.OverScrollView
+
+<com.tutu.pestcs.widget.TuLinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/base_layout"
-    android:background="@color/main_bg"
     android:orientation="vertical">
 
-
-    <LinearLayout
-        android:orientation="vertical"
+    <com.tutu.pestcs.widget.OverScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/base_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/main_bg"
+        android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/et_note"
-            style="@style/et_style"
-            android:layout_width="match_parent"
-            android:layout_height="220dp"
-            android:layout_margin="16dp"
-            android:gravity="top|left"
-            android:hint="简要记录,限200字以内"
-            android:maxLength="200"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:orientation="horizontal"
-            android:paddingBottom="16dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/btn_save"
-                style="@style/btn_style"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:text="保存"
-                />
+            <EditText
+                android:id="@+id/et_note"
+                style="@style/et_style"
+                android:layout_width="match_parent"
+                android:layout_height="220dp"
+                android:layout_margin="16dp"
+                android:gravity="top|left"
+                android:hint="简要记录,限200字以内"
+                android:maxLength="200"
+                android:paddingLeft="8dp"
+                android:paddingTop="8dp"/>
 
-            <Button
-                android:id="@+id/btn_exit"
-                style="@style/btn_style"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:text="退出"
-                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:orientation="horizontal"
+                android:paddingBottom="16dp">
+
+                <Button
+                    android:id="@+id/btn_save"
+                    style="@style/btn_style"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:text="保存"
+                    />
+
+                <Button
+                    android:id="@+id/btn_exit"
+                    style="@style/btn_style"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:text="退出"
+                    />
+            </LinearLayout>
+
         </LinearLayout>
 
-    </LinearLayout>
+    </com.tutu.pestcs.widget.OverScrollView>
 
-</com.tutu.pestcs.widget.OverScrollView>
+</com.tutu.pestcs.widget.TuLinearLayout>
